--- a/graphics/gimp-app/Makefile
+++ b/graphics/gimp-app/Makefile
@@ -1,26 +1,25 @@
 # New ports collection makefile for:    Gimp
-# Version required:     0.99.17
+# Version required:     0.99.19
 # Date created:         Mon Nov 18 21:28:43 CST 1996
 # Whom:                 erich@FreeBSD.org
 #
-# $Id: Makefile,v 1.19 1998/01/28 15:39:56 erich Exp $
+# $Id: Makefile,v 1.20 1998/02/21 22:37:56 fenner Exp $
 #
 
 MAJOR=	0
 MINOR=	99
-MICRO=	18
+MICRO=	21
 
 VERSION=		${MAJOR}.${MINOR}.${MICRO}
 MM_VERSION= ${MAJOR}.${MINOR}
 
 DISTNAME=   gimp-${VERSION}
 DISTFILES=	${DISTNAME}.tar.gz
-DISTFILES+=	gimp-data-min-${MM_VERSION}b.tar.gz \
-            gimp-data-extras-${MM_VERSION}a.tar.gz
+DISTFILES+=     gimp-data-extras-${MM_VERSION}a.tar.gz
 
-CATEGORIES=     graphics tk80
-MASTER_SITES=   ftp://ftp.gimp.org/pub/gimp/0.99/${VERSION}/ \
-                ftp://ftp.cs.umn.edu/pub/gimp/gimp/0.99/${VERSION}/ \
+CATEGORIES=     graphics
+MASTER_SITES=   ftp://ftp.gimp.org/pub/gimp/v${MAJOR}.${MINOR}/v${VERSION}/ \
+                ftp://ftp.cs.umn.edu/pub/gimp/gimp/v${MAJOR}.${MINOR}/v${VERSION}/ \
 
 MAINTAINER=     erich@FreeBSD.org
 
@@ -30,25 +29,20 @@ LIB_DEPENDS+=	jpeg\\.7\\.:${PORTSDIR}/graphics/jpeg
 LIB_DEPENDS+=	tiff34\\.1\\.:${PORTSDIR}/graphics/tiff34
 LIB_DEPENDS+=	Xpm\\.4\\.:${PORTSDIR}/graphics/xpm
 LIB_DEPENDS+=	mpeg\\.1\\.2:${PORTSDIR}/graphics/mpeg-lib
-LIB_DEPENDS+=	tk80\\.1\\.:${PORTSDIR}/x11/tk80
 LIB_DEPENDS+=	xdelta\\.0:${PORTSDIR}/misc/xdelta
 
 USE_X11=	yes
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
 
-CONFIGURE_ENV=	CPPFLAGS="-I${LOCALBASE}/include -I${LOCALBASE}/include/tcl8.0 \
-		-I${LOCALBASE}/include/tk8.0 -I${LOCALBASE}/include/tiff34" \
+CONFIGURE_ENV=	CPPFLAGS="-I${LOCALBASE}/include \
+		-I${LOCALBASE}/include/tiff34" \
 		LIBS=-L${LOCALBASE}/lib INSTALL_SCRIPT='$${INSTALL} -m 755'
-CONFIGURE_ARGS=  --with-tcl=tcl80 --with-tk=tk80
 
 DATASTUFF=  brushes palettes gradients patterns
 
 post-install:
 	mkdir -p ${PREFIX}/share/gimp/;
-	cd ${WRKDIR}/gimp-data-min-${MM_VERSION}b; \
-	tar -cf - --exclude '*Makefile*' ${DATASTUFF} |\
-	(cd ${PREFIX}/share/gimp/; tar -xvf -)
 	cd ${WRKDIR}/gimp-data-extras-${MM_VERSION}a; \
 	tar -cf - --exclude '*Makefile*' ${DATASTUFF} |\
 	(cd ${PREFIX}/share/gimp/; tar -xvf -)
