--- a/lang/tcl80/Makefile
+++ b/lang/tcl80/Makefile
@@ -3,7 +3,7 @@
 # Date created:		19 August 1997
 # Whom:			jkh
 #
-# $Id: Makefile,v 1.3 1997/11/26 22:48:50 pst Exp $
+# $Id: Makefile,v 1.4 1997/12/01 16:50:49 pst Exp $
 #
 
 DISTNAME=	tcl8.0p2
@@ -17,6 +17,18 @@ WRKSRC=		${WRKDIR}/tcl8.0/unix
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--enable-shared
 CONFIGURE_ENV=  PORTSDIR=${PORTSDIR}
+
+SHLIB_MAJOR=	1
+SHLIB_MINOR=	2
+MAKEFILE=	makefile
+
+post-configure:
+	@${CP} ${FILESDIR}/Makefile.lib ${WRKSRC}
+	@${CP} ${FILESDIR}/makefile     ${WRKSRC}
+
+pre-build:
+	@cd ${WRKSRC} && ${MAKE} -f Makefile.lib PREFIX=${PREFIX} \
+	   SHLIB_MAJOR=${SHLIB_MAJOR} SHLIB_MINOR=${SHLIB_MINOR}
 
 post-install:
 	${LDCONFIG} -m ${PREFIX}/lib
