--- a/net/ztelnet/Makefile
+++ b/net/ztelnet/Makefile
@@ -3,7 +3,7 @@
 # Date created:         15 Mar 1998
 # Whom:                 CHOI Junho <junker@jazz.snu.ac.kr>
 #
-# $Id$
+# $Id: Makefile,v 1.3 1998/03/16 07:22:11 steve Exp $
 #
 # In this ports..
 #   - new compilation diff for FreeBSD(now we can upload!)
@@ -20,6 +20,7 @@ MAINTAINER=	junker@jazz.snu.ac.kr
 
 NO_WRKSUBDIR=	yes
 PATCH_STRIP=	-p1
+MAN1=			ztelnet.1
 
 post-patch:
 	@( cd ${WRKSRC}/ztelnet && \
@@ -35,5 +36,6 @@ do-install:
 	@cd ${WRKSRC}/ztelnet; \
 	${MKDIR} ${PREFIX}/bin; \
 	${INSTALL_PROGRAM} telnet/telnet ${PREFIX}/bin/ztelnet
+	${INSTALL_MAN} ${WRKDIR}/ztelnet/telnet/telnet.1 ${PREFIX}/man/man1/ztelnet.1
 
 .include <bsd.port.mk>
