--- a/mail/fetchmail/Makefile
+++ b/mail/fetchmail/Makefile
@@ -3,7 +3,7 @@
 # Date created:		26 Oct 1996
 # Whom:			Ville Eerola <ve@sci.fi>
 #
-# $Id: Makefile,v 1.55 1998/01/29 17:13:07 ache Exp $
+# $Id: Makefile,v 1.56 1998/03/02 22:11:46 ache Exp $
 #
 
 DISTNAME=       fetchmail-4.3.8
@@ -17,8 +17,8 @@ CONFIGURE_ARGS= --enable-opie
 CONFIGURE_ENV=  LDFLAGS="${CFLAGS}"
 MAN1=		fetchmail.1
 
-.if exists(/usr/lib/libkrb.a) && (defined(MAKE_EBONES) || defined(MAKE_KERBEROS4))
-CONFIGURE_ARGS += --with-kerberos=/usr/include/kerberosIV
+.if exists(/usr/lib/libkrb.a) && defined(MAKE_KERBEROS4)
+CONFIGURE_ARGS += --with-kerberos=/usr/include
 .endif
 
 FDOC=   ${PREFIX}/share/doc/fetchmail
